# openclaw-fintech

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  README.md  SURVEY_CONCLUSION.md  WEEKLY_LOG.md  cli.py  demo.py  docker-compose.models.yml  docker-compose.yml  gateway_bot.py  pyproject.toml  requirements.txt  survey.html  survey.md
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
data/: fintech.db  sessions.json
docker/: alerts.yml  docker-compose.yaml  prometheus.yml
gateway/: .env.example  config.yaml
scripts/: add_sec_entity.sh  setup.sh
skills/analyst/: __init__.py  handlers.py  models.py  personalities.py  presets.py  scoring.py
skills/defi/: governance.py  handlers.py  skill.yaml  transaction_builder.py  web3_client.py
skills/execution/: __init__.py  alpha_optimization.py  handlers.py  models.py  order_manager.py  order_splitter.py  risk_limits.py  safeguards.py  session.py
skills/feedback/: __init__.py  adapter.py  loop.py  scorer.py
skills/finance/: handlers.py  plaid_client.py  receipt_ocr.py  skill.yaml
skills/intel/: __init__.py  handlers.py  models.py  regime.py
skills/intraday/: __init__.py  calibration.py  handlers.py  (+3 more)
tests/: conftest.py  test_approval.py  test_checkpoint.py  test_database.py  test_dead_letter.py  test_encryption.py  test_feedback.py  test_fmp.py  test_gdpr_scanner.py  test_intraday.py  test_market_data_adapter.py  test_metrics.py  test_order_manager.py  test_plaid.py  test_pnl.py  test_quant_agents.py  test_rbac.py  test_receipt_ocr.py  test_resilience.py  test_session_mapper.py  test_strategy.py
(+83 files in other folders)
